[package]
name = "contract-utils"
version = "0.1.0"
authors = ["Willem Wyndham <willem@near.org>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# near-sdk = { path = "../../../near-sdk-rs/near-sdk"}
near-sdk = { git = "https://github.com/ahalabs/near-sdk-rs", tag = "v4.0.0-3", features = ["unstable"]}
near-units = "0.2.0"
