[package]
authors = ["Willem Wyndham <willem@near.org>"]
edition = "2021"
name = "contract-launcher"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
near-components = {path = "../..", features = ["wee_alloc"]}
near-components-core = { path = "../../components/core"}
[features]
testnet = []