[package]
edition = "2021"
name = "bootloader-locked"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# near-units = "0.2.0"
near-riffs-core = { path = "../../riffs/core", features = ["parent_only_redeploy"] }
near-riffs = { path = "../.." }


[features]
default = ["near-riffs-core/wee_alloc"]
testnet = []
