[package]
name = "status-message-advanced"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
# near-units = "0.2.0"
near-components = {path = "../..", features = ["wee_alloc"]}
near-components-core = {path = "../../components/core"}

