[package]
edition = "2021"
name = "near-riffs-core"
version = "0.1.0"
publish = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-riffs = {path = "../.."}
microjson = "0.1.0"

[features]
wee_alloc = ["near-riffs/wee_alloc"]
parent_only_redeploy = []

[package.metadata.witgen]
export = true
